<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="#F2F2F2" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#000000"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:text="@string/douknow"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/txtHeader"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/txtUserName"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edtUserName"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/txtFullName"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edtFullName"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/txtPwd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtConfirmPwd"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edtPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/txtConfirmPwd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtProfession"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edtConfirmPwd"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/txtProfession"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMobile"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edtProfession"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/txtMobile"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edtMobile"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/txtEmail"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" >

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_below="@+id/edtEmail"
                android:background="@drawable/button_selector"
                android:onClick="registerUser"
                android:text="@string/btnSubmit"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_below="@+id/edtEmail"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/btnSubmit"
                android:background="@drawable/button_selector"
                android:onClick="resetForm"
                android:text="@string/btnReset"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>