<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                           android:id="@+id/scrollView1"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_alignParentTop="true"
                        >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
 <TextView
        android:id="@+id/txtHeader"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#000000"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:text="@string/douknow"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />
 
 <Spinner 
      android:id="@+id/ddlCategory"
      android:layout_width="fill_parent"
      android:layout_height="55dp"
      android:layout_below="@+id/txtHeader"
      android:layout_marginTop="10dp"
      android:layout_centerHorizontal="true"  
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:background="@drawable/spinner"
      android:paddingLeft="15dp"/>
 
  <Spinner 
      android:id="@+id/ddlSubCategory"
      android:layout_width="fill_parent"
      android:layout_height="55dp"
      android:layout_below="@+id/ddlCategory"
      android:layout_marginTop="10dp"
      android:layout_centerHorizontal="true"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp" 
      android:background="@drawable/spinner" 
      android:paddingLeft="15dp"/>
  
  <EditText 
      android:id="@+id/edtQuestion"
      android:layout_width="fill_parent"
      android:layout_height="170dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/ddlSubCategory"
      android:layout_marginTop="10dp"
      android:hint="@string/questionHere"
      android:inputType="textMultiLine"
      android:gravity="top"/>

  <Button
      android:id="@+id/btnSubmit"
      android:layout_width="80dp"
      android:layout_height="50dp"
      android:layout_centerVertical="true"
     android:layout_below="@+id/edtQuestion"
     android:text="@string/btnSubmit"
     android:textColor="#FFFFFF"
     android:textSize="22dp"
     android:layout_marginLeft="10dp"
      android:background="@drawable/button_view"
      android:onClick="submitQuestion"
       />

   <Button
       android:id="@+id/btnView"
       android:layout_width="fill_parent"
       android:layout_height="140dp"
       android:layout_centerHorizontal="true"
       android:layout_below="@+id/btnSubmit"
      android:background="@drawable/button_view"
       android:text="@string/btnView"
       android:textColor="#FFFFFF"
       android:layout_marginTop="10dp"
       android:textSize="22dp" 
       android:onClick="viewQuestions"/>

</RelativeLayout>
</ScrollView>